...

    <TextView
        android:id="@+id/guide_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/search_guild_text"
        app:layout_constraintBottom_toBottomOf="@+id/building_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/building_searchView"
        app:layout_constraintVertical_bias="0.93" />

    <android.widget.SearchView
...
        app:queryHint="Type here to search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/building_recyclerView"
        android:layout_width="409dp"
        android:layout_height="612dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/building_searchView"
        app:layout_constraintVertical_bias="0.0" />

...
